Fixed small shifting in navbar

--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -1,36 +1,48 @@
 .navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 7px 20px;
-    background-color: #333;
-    color: #fff;
-  }
-  
-  .navbar__logo a {
-    color: #fff;
-    text-decoration: none;
-    font-size: 1.5em;
-    font-weight: bold;
-  }
-  
-  .navbar__links {
-    list-style: none;
-    display: flex;
-    gap: 20px;
-  }
-  
-  .navbar__links a {
-    color: #fff;
-    text-decoration: none;
-  }
-  
-  .navbar__links a:hover {
-    color: #ddd;
-  }
+  padding: 1%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #333;
+  color: #fff;
+  width: 100%;
+  flex-wrap: wrap;
+}
 
-  .WikipediaBirdLogoNavbar {
-    width: 75px;
-    height: 75px;
-    padding-left: 30px;
+.navbar__logo a {
+  padding: 7px 20px 7px 0;
+  color: #fff;
+  text-decoration: none;
+  font-size: 1.5em;
+  font-weight: bold;
+}
+
+.navbar__links {
+  list-style: none;
+  display: flex;
+  gap: 20px;
+  padding: 7px 20px;
+  margin-right: 2%;
+}
+
+@media (max-width: 600px) {
+  .navbar__links {
+    flex-direction: column;
+    align-items: center;
   }
+}
+
+.navbar__links a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.navbar__links a:hover {
+  color: #ddd;
+}
+
+.WikipediaBirdLogoNavbar {
+  width: 75px;
+  height: 75px;
+  padding-left: 30px;
+}
